# razorpay-python

./: .editorconfig  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .prettierrc.yaml  .yamllint.yml  CHANGELOG.md  README.md  pyproject.toml  renovate.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
documents/: account.md  addon.md  card.md  customer.md  dispute.md  document.md  emandate.md  fund.md  iin.md  invoice.md  items.md  order.md  papernach.md  payment.md  paymentLink.md  paymentVerfication.md  plans.md  productConfiguration.md  qrcode.md  refund.md  registerEmandate.md  registerNach.md  settlement.md  stakeholder.md  subscription.md  token.md  transfer.md  upi.md  virtualAccount.md  webhook.md
razorpay/: __init__.py  client.py  errors.py
razorpay/constants/: __init__.py  device.py  error_code.py  http_status_code.py  url.py
razorpay/resources/: __init__.py  account.py  addon.py  base.py  card.py  customer.py  device_activity.py  dispute.py  document.py  fund_account.py  iin.py  invoice.py  item.py  order.py  payment.py  payment_link.py  plan.py  product.py  qrcode.py  refund.py  registration_link.py  settlement.py  stakeholder.py  subscription.py  token.py  transfer.py  virtual_account.py  webhook.py
razorpay/utility/: __init__.py  utility.py
requirements/: base.txt  dev.txt
tests/: helpers.py  test_client_account.py  test_client_addon.py  test_client_card.py  test_client_customer.py  test_client_dispute.py  test_client_document.py  test_client_error.py  test_client_fund_account.py  test_client_iin.py  test_client_invoice.py  test_client_item.py  test_client_order.py  test_client_payment.py  test_client_payment_link.py  test_client_plan.py  test_client_product.py  test_client_qrcode.py  test_client_refund.py  test_client_registration_link.py  test_client_settlement.py  test_client_stakeholder.py  test_client_subscription.py  test_client_token.py  test_client_transfer.py  test_client_utility.py  test_client_virtual_account.py  test_client_webhook.py  test_multiple_client.py  test_user_agent.py
